# cba-insightspark-data-platform

./: .gitignore  README.md  main.py  pyproject.toml
deliverables/: task1_analysis_results.xlsx  task2_anonymized_customers.csv  task3_executive_summary.txt  task3_proposal.md  task3_twitter_processed_data.csv
docs/: task2_report.md  task3_proposal.md  task4_database_design.md
notebooks/: 01_task1_analysis.ipynb  02_task2_anonymization.ipynb  03_task3_twitter_analysis.ipynb
notebooks/deliverables/: task2_anonymized_customers.csv
notebooks/docs/: task1_report.md
sql/: schema.sql
src/: task1_analysis.py  task2_anonymization.py  task3_twitter_proposal.py  task4_database_design.py
